--- a/strona.html
+++ b/strona.html
@@ -1,9 +1,9 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Dwuosobowa firma zajmująca się projektowaniem stron internetowych.">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Dwuosobowa firma zajmująca się projektowaniem stron internetowych." />
     <title>Nasza Firma - Projektowanie Stron Internetowych</title>
     <style>
         body {
@@ -31,13 +31,13 @@
         }
 
         header .logo img {
-            height: 60px;  
+            height: 60px;
             margin-right: 10px;
         }
 
         header .logo h1 {
             margin: 0;
-            font-size: 22px;  
+            font-size: 22px;
         }
 
         header .menu {
@@ -45,7 +45,7 @@
             margin: 0;
             padding: 0;
             display: flex;
-            gap: 70px;  
+            gap: 70px;
             margin-right: 470px;
         }
 
@@ -56,12 +56,12 @@
         header .menu li a {
             color: white;
             text-decoration: none;
-            font-size: 18px;  
-            transition: color 0.4s ease;  
+            font-size: 18px;
+            transition: color 0.4s ease;
         }
 
         header .menu li a:hover {
-            color: #f4b400;  
+            color: #f4b400;
         }
 
         .bohater {
@@ -95,18 +95,27 @@
             background-color: #e39a00;
         }
 
-        .o-nas, .uslugi, .kontakt, .portfolio {
+        .o-nas,
+        .uslugi,
+        .kontakt,
+        .portfolio {
             padding: 50px 20px;
             text-align: center;
         }
 
-        .o-nas h2, .uslugi h2, .kontakt h2, .portfolio h2 {
+        .o-nas h2,
+        .uslugi h2,
+        .kontakt h2,
+        .portfolio h2 {
             font-size: 30px;
             color: #333;
             margin-bottom: 20px;
         }
 
-        .o-nas p, .uslugi p, .kontakt p, .portfolio p {
+        .o-nas p,
+        .uslugi p,
+        .kontakt p,
+        .portfolio p {
             font-size: 18px;
             color: #666;
         }
@@ -155,7 +164,7 @@
             border-radius: 9px;
             max-width: 1000px;
             margin: 50px auto 0;
-            box-shadow: 0 0 15px rgba(0,0,0,0.1);
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
         }
 
         .kontakt form label {
@@ -200,56 +209,55 @@
             font-size: 14px;
         }
         .slider-container {
-    overflow: hidden;
-    position: relative;
-    width: 100%;
-    background-color: #f0f4f7;
-    padding: 20px 0;
-}
+            overflow: hidden;
+            position: relative;
+            width: 100%;
+            background-color: #f0f4f7;
+            padding: 20px 0;
+        }
 
-.slider-track {
-    display: flex;
-    gap: 20px;
-    animation: scrollSlider 30s linear infinite;
-    width: fit-content;
-}
+        .slider-track {
+            display: flex;
+            gap: 20px;
+            animation: scrollSlider 30s linear infinite;
+            width: fit-content;
+        }
 
-.usluga {
-    flex: 0 0 auto;
-    width: 240px;
-    background-color: #fff;
-    padding: 2000px;
-    border-radius: 10px;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-    text-align: center;
-}
+        .usluga {
+            flex: 0 0 auto;
+            width: 240px;
+            background-color: #fff;
+            padding: 2000px;
+            border-radius: 10px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+            text-align: center;
+        }
 
-.usluga h3 {
-    font-size: 20px;
-    color: #333;
-    margin-bottom: 20px;
-}
+        .usluga h3 {
+            font-size: 20px;
+            color: #333;
+            margin-bottom: 20px;
+        }
 
-.usluga p {
-    font-size: 300px;
-    color: #666;
-}
+        .usluga p {
+            font-size: 300px;
+            color: #666;
+        }
 
-@keyframes scrollSlider {
-    0% {
-        transform: translateX(0);
-    }
-    100% {
-        transform: translateX(-50%);
-    }
-}
-
-</style>
+        @keyframes scrollSlider {
+            0% {
+                transform: translateX(0);
+            }
+            100% {
+                transform: translateX(-50%);
+            }
+        }
+    </style>
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="Zrzut_ekranu_2025-05-21_084041-removebg-preview.png" alt="Logo firmy">
+            <img src="img/Zrzut_ekranu_2025-05-21_084041-removebg-preview.png" alt="Logo firmy" />
         </div>
         <ul class="menu">
             <li><a href="#o-nas">O nas</a></li>
@@ -269,7 +277,9 @@
 
     <section id="o-nas" class="o-nas">
         <h2>O Nas</h2>
-        <p>Jesteśmy dwuosobową firmą specjalizującą się w projektowaniu nowoczesnych stron internetowych tylko front-endu. Dbamy o estetykę, funkcjonalność i łatwość użytkowania, tworząc rozwiązania, które pasują do każdego biznesu.</p>
+        <p>
+            Jesteśmy dwuosobową firmą specjalizującą się w projektowaniu nowoczesnych stron internetowych tylko front-endu. Dbamy o estetykę, funkcjonalność i łatwość użytkowania, tworząc rozwiązania, które pasują do każdego biznesu.
+        </p>
     </section>
 
     <section id="uslugi" class="uslugi">
@@ -297,22 +307,22 @@
         <h2>Nasze Portfolio</h2>
         <div class="portfolio-galeria">
             <div class="projekt">
-                <img src="komis.png" alt="komis">
+                <img src="img/komis.png" alt="komis" />
                 <h3>Design dla komisu samochodowego</h3>
                 <p>Profesjonalny design i responsywność, które pomogoły wyróżnić się w internecie.</p>
             </div>
             <div class="projekt">
-                <img src="budowlaniec.png" alt="budowa">
+                <img src="img/budowlaniec.png" alt="budowa" />
                 <h3>Strona dla Firmy Panoramafirm</h3>
                 <p>Innowacyjne rozwiązanie front-endowe, które pomogły zaangażować klientów.</p>
             </div>
             <div class="projekt">
-                <img src="ktm.jpg" alt="KTM">
+                <img src="img/ktm.jpg" alt="KTM" />
                 <h3>Strona tutułowa</h3>
                 <p>Tworzenie stron tytułowych jest dla nas jak bułka z masłem!</p>
             </div>
             <div class="projekt">
-                <img src="dzw.jpg" alt="DZW motors">
+                <img src="img/dzw.jpg" alt="DZW motors" />
                 <h3>Strona DZW motors</h3>
                 <p>Strony na których użytkownik czuje sie jak w domu.</p>
             </div>
@@ -328,13 +338,13 @@
 
         <form action="mailto:kontakt@naszafirma.pl" method="POST" enctype="text/plain">
             <label for="name">Imię i nazwisko:</label>
-            <input type="text" id="name" name="name" required>
+            <input type="text" id="name" name="name" required />
 
             <label for="email">Adres e-mail:</label>
-            <input type="email" id="email" name="email" required>
+            <input type="email" id="email" name="email" required />
 
             <label for="subject">Temat:</label>
-            <input type="text" id="subject" name="subject" required>
+            <input type="text" id="subject" name="subject" required />
 
             <label for="message">Wiadomość:</label>
             <textarea id="message" name="message" rows="6" required></textarea>
@@ -352,7 +362,7 @@
         // Smooth scroll do sekcji
         document.addEventListener("DOMContentLoaded", function () {
             const links = document.querySelectorAll('a[href^="#"]');
-            links.forEach(link => {
+            links.forEach((link) => {
                 link.addEventListener("click", function (e) {
                     e.preventDefault();
                     const target = document.querySelector(this.getAttribute("href"));
